Add cover image to the Colab notebook

--- a/run_in_colab.ipynb
+++ b/run_in_colab.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "eb836d12",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://github.com/Armaggheddon/retinanet_demystified/raw/main/.github/cover_image.png\" width=\"800\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "13d6b818",
    "metadata": {},
    "source": [
